applications/scratch-5799822/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-5799822
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-5799822

  template:
    metadata:
      labels:
        app: scratch-5799822

    spec:
      containers:
      - name: scratch-5799822
        image: scratch:latest

        ports:
        - containerPort: 80
