applications/scratch-5799822/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-5799822
  namespace: scratch

spec:
  selector:
    app: scratch-5799822

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
